Add header and hero

--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header-wrapper wrapper">
+            <h1 class="main-header">Zamów Magazyn Business</h1>
+            <h2 class="second-header">Zdobądź nową wiedzę i <strong>zwiększ zysk</strong></h2>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="hero-wrapper wrapper">
+                <div class="hero-benefits">
+                    <ul class="benefits-list">
+                        <strong class="benefits-strong">Warto nas czytać, ponieważ podpowiemy:</strong>
+                        <li>
+                            <span class="fas fa-check benefits-icon"></span>
+                            jak <strong>zwiększyć zysk</strong>
+                        </li>
+                        <li>
+                            <span class="fas fa-check benefits-icon"></span>
+                            jak dobrze zainwestować <strong>dodatkowe środki</strong>
+                        </li>
+                        <li>
+                            <span class="fas fa-check benefits-icon"></span>
+                             gdzie leciec na wakacje za <strong>zarobione pieniądze</strong>
+                        </li>
+                    </ul>
+                    <div class="hero-btn-wrapper">
+                        <a href="#form" class="hero-btn btn">Zamów Magazyn Business</a>
+                        <span class="hero-btn-span">(przeniesie do formularza zamówienia)</span>
+                    </div>
+                </div>
+                <div class="hero-photo">
+                    <img src="img/business.jpg" alt="Magazyn Business" />
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
