--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </li>
                         <li>
                             <span class="fas fa-check benefits-icon"></span>
-                             gdzie leciec na wakacje za <strong>zarobione pieniądze</strong>
+                            gdzie leciec na wakacje za <strong>zarobione pieniądze</strong>
                         </li>
                     </ul>
                     <div class="hero-btn-wrapper">
@@ -46,6 +46,56 @@
                 </div>
                 <div class="hero-photo">
                     <img src="img/business.jpg" alt="Magazyn Business" />
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+            <h2 class="hide-header">Opinie</h2>
+            <div class="reviews-wrapper wrapper">
+                <div class="opinion">
+                    <div class="opinion-photo">
+                        <img src="img/businesswoman.jpg" alt="Businesswoman" />
+                    </div>
+                    <div class="opinion-text">
+                        <div class="triangle left-triangle">
+                            <div class="triangle-inside left-triangle-inside"></div>
+                        </div>
+                        <p>
+                            <span>Joanna</span>
+                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
+                            perspiciatis repellendus impedit.
+                        </p>
+                    </div>
+                </div>
+                <div class="opinion">
+                    <div class="opinion-text">
+                        <div class="triangle right-triangle">
+                            <div class="triangle-inside right-triangle-inside"></div>
+                        </div>
+                        <p>
+                            <span>Maciej</span>
+                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
+                            perspiciatis repellendus impedit.
+                        </p>
+                    </div>
+                    <div class="opinion-photo">
+                        <img src="img/businessman.jpg" alt="Businessman" />
+                    </div>
+                </div>
+                <div class="opinion">
+                    <div class="opinion-photo">
+                        <img src="img/businesswoman.jpg" alt="Businesswoman" />
+                    </div>
+                    <div class="opinion-text">
+                        <div class="triangle left-triangle">
+                            <div class="triangle-inside left-triangle-inside"></div>
+                        </div>
+                        <p>
+                            <span>Joanna</span>
+                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
+                            perspiciatis repellendus impedit.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
