--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Magazyn Business</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -97,6 +97,18 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="quotation">
+            <div class="quotation-wrapper wrapper">
+                <blockquote>
+                    <p class="cite">
+                        "Im dłużej nie podejmiesz działania, tym więcej pieniędzy tracisz."
+                    </p>
+                    <p class="author">
+                        &#45; Carrie Wilkerson
+                    </p>
+                </blockquote>
             </div>
         </section>
     </main>
