--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <main>
         <section class="hero">
+            <h2 class="hide-header">Magazyn Business</h2>
             <div class="hero-wrapper wrapper">
                 <div class="hero-benefits">
                     <ul class="benefits-list">
@@ -100,6 +101,7 @@
             </div>
         </section>
         <section class="quotation">
+            <h2 class="hide-header">Cytat</h2>
             <div class="quotation-wrapper wrapper">
                 <blockquote>
                     <p class="cite">
@@ -109,6 +111,42 @@
                         &#45; Carrie Wilkerson
                     </p>
                 </blockquote>
+            </div>
+        </section>
+        <section class="articles">
+            <div class="articles-wrapper wrapper">
+            <h2 class="second-header articles-header">Znajdziesz u nas między innymi</h2>
+                <div class="articles-box">
+                    <div class="article">
+                        <ul class="article-list">
+                            Porady na temat:
+                            <li>prowadzenia przedsiębiorstwa</li>
+                            <li>marketingu internetowego</li>
+                            <li>inwestowania na giełdzie</li>
+                            <li><strong>podnoszenia swoich kwalifikacji</strong></li>
+                            <li>nawiązywania znajomości biznesowych</li>
+                        </ul>
+                    </div>
+                    <div class="article">
+                        <ul class="article-list">
+                            Wywiady z:
+                            <li>przedsiębiorcami z Polski</li>
+                            <li>przedsiębiorcami z zagranicy</li>
+                            <li><strong>milionerami</strong></li>
+                            <li>politykami</li>
+                            <li>sportowcami</li>
+                        </ul>
+                    </div>
+                    <div class="article">
+                        <ul class="article-list">
+                            Informacje na temat:
+                            <li>wydarzeń branżowych</li>
+                            <li>nowych marek samochodów</li>
+                            <li>najlepszych sportowców</li>
+                            <li>promocji na nasz magazyn</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
