Add promotion section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
                 </div>
             </div>
         </section>
+        <section class="promotion">
+            <div class="promotion-wrapper wrapper">
+                <div class="promotion-photo">
+                    <img src="img/business2.jpg" alt="Magazyn Business" />
+                </div>
+                <div class="promotion-text">
+                    <h2 class="second-header promotion-header">Promocja na prenumeratę!</h2>
+                    <p>
+                        Do końca promocji pozostało:
+                        <br /><span class="promotion-days-counter"></span> dni
+                    </p>
+                    <p>
+                        <s class="promotion-old-price">300 zł</s> <span class="promotion-price">150 zł</span>
+                        <br /><span class="promotion-date">(tylko do 31.12.2019)</span>
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
