Update photo and use autoprefixer

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                         </div>
                         <p>
                             <span>Joanna</span>
-                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
-                            perspiciatis repellendus impedit.
+                            <br />Na co dzień pracuję jako księgowa w dużej firmie produkcyjnej, ale to właśnie dzięki magazynowi Business <strong>nauczyłam się</strong>, w jaki sposób <strong>lepiej gospodarować</strong> własnymi <strong>środkami</strong>, co <strong>pozwoliło mi to na wyjazd na Hawaje</strong> wraz z rodziną.
                         </p>
                     </div>
                 </div>
@@ -75,26 +74,24 @@
                         </div>
                         <p>
                             <span>Maciej</span>
-                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
-                            perspiciatis repellendus impedit.
+                            <br />Byłem młodym pracownikiem korporacji pracującym na pełny etat od 8:00 do 16:00. Moja codzienność była pozbawiona wyzwań, a ja chciałem czegoś więcej. Dzięki magazynowi Business nauczyłem się, w jaki sposób mogę założyć działalność gospodarczą. Teraz od dwóch lat <strong>prowadzę dobrze prosperującą firmę</strong>.
                         </p>
                     </div>
                     <div class="opinion-photo">
-                        <img src="img/businessman.jpg" alt="Businessman" />
+                        <img src="img/businessman.png" alt="Businessman" />
                     </div>
                 </div>
                 <div class="opinion">
                     <div class="opinion-photo">
-                        <img src="img/businesswoman.jpg" alt="Businesswoman" />
+                        <img src="img/businessman2.jpg" alt="Businessman" />
                     </div>
                     <div class="opinion-text">
                         <div class="triangle left-triangle">
                             <div class="triangle-inside left-triangle-inside"></div>
                         </div>
                         <p>
-                            <span>Joanna</span>
-                            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis cumque distinctio doloremque expedita eos nemo, dolorum aspernatur magni molestiae repudiandae, aliquam accusantium illum enim tenetur at totam
-                            perspiciatis repellendus impedit.
+                            <span>Adam</span>
+                            <br />Pewnego dnia przeglądając magazyn Business natrafiłem na informację o targach nieruchomości. Do tej pory nie byłem zainteresowany tą branżą, jednak na nich poznałem inspirujących ludzi, dzięki którym postanowiłem zainwestować środki w nieruchomości. <strong>Obecnie posiadam kilka mieszkań na wynajem</strong>.
                         </p>
                     </div>
                 </div>
