--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
             </div>
         </section>
         <section class="form-section">
-            <div class="form-wrapper wrapper">
+            <div class="form-wrapper wrapper" id="form">
                 <h2 class="second-header form-header">Formularz zamówienia</h2>
                 <p>
                     W celu złożenia zamówienia prosimy o wypełnienie poniższego formularza (wszystkie pola są obowiązkowe).
                 </p>
-                <form class="form">
+                <form class="form" onsubmit="alert('Dziękujemy za złożenie zamówienia.');">
                     <div class="form-item">
                         <label for="name">Imię i nazwisko</label>
                         <div class="input-box">
