Add promotion (hero)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                             gdzie leciec na wakacje za <strong>zarobione pieniądze</strong>
                         </li>
                     </ul>
+                    <div class="hero-promotion">
+                        <span class="hero-promotion-strong">Promocja na prenumeratę</span>
+                        <br /><s class="promotion-old-price">300 zł</s> <span class="promotion-price">150 zł</span>
+                    </div>
                     <div class="hero-btn-wrapper">
                         <a href="#form" class="btn hero-btn">Zamów Magazyn Business</a>
                         <span class="hero-btn-span">(przeniesie do formularza zamówienia)</span>
@@ -63,7 +67,8 @@
                         </div>
                         <p>
                             <span>Joanna</span>
-                            <br />Na co dzień pracuję jako księgowa w dużej firmie produkcyjnej, ale to właśnie dzięki magazynowi Business <strong>nauczyłam się</strong>, w jaki sposób <strong>lepiej gospodarować</strong> własnymi <strong>środkami</strong>, co <strong>pozwoliło mi to na wyjazd na Hawaje</strong> wraz z rodziną.
+                            <br />Na co dzień pracuję jako księgowa w dużej firmie produkcyjnej, ale to właśnie dzięki magazynowi Business <strong>nauczyłam się</strong>, w jaki sposób <strong>lepiej gospodarować</strong> własnymi
+                            <strong>środkami</strong>, co <strong>pozwoliło mi to na wyjazd na Hawaje</strong> wraz z rodziną.
                         </p>
                     </div>
                 </div>
@@ -74,7 +79,8 @@
                         </div>
                         <p>
                             <span>Maciej</span>
-                            <br />Byłem młodym pracownikiem korporacji pracującym na pełny etat od 8:00 do 16:00. Moja codzienność była pozbawiona wyzwań, a ja chciałem czegoś więcej. Dzięki magazynowi Business nauczyłem się, w jaki sposób mogę założyć działalność gospodarczą. Teraz od dwóch lat <strong>prowadzę dobrze prosperującą firmę</strong>.
+                            <br />Byłem młodym pracownikiem korporacji pracującym na pełny etat od 8:00 do 16:00. Moja codzienność była pozbawiona wyzwań, a ja chciałem czegoś więcej. Dzięki magazynowi Business nauczyłem się, w jaki sposób mogę
+                            założyć działalność gospodarczą. Teraz od dwóch lat <strong>prowadzę dobrze prosperującą firmę</strong>.
                         </p>
                     </div>
                     <div class="opinion-photo">
@@ -91,7 +97,8 @@
                         </div>
                         <p>
                             <span>Adam</span>
-                            <br />Pewnego dnia przeglądając magazyn Business natrafiłem na informację o targach nieruchomości. Do tej pory nie byłem zainteresowany tą branżą, jednak na nich poznałem inspirujących ludzi, dzięki którym postanowiłem zainwestować środki w nieruchomości. <strong>Obecnie posiadam kilka mieszkań na wynajem</strong>.
+                            <br />Pewnego dnia przeglądając magazyn Business natrafiłem na informację o targach nieruchomości. Do tej pory nie byłem zainteresowany tą branżą, jednak na nich poznałem inspirujących ludzi, dzięki którym postanowiłem
+                            zainwestować środki w nieruchomości. <strong>Obecnie posiadam kilka mieszkań na wynajem</strong>.
                         </p>
                     </div>
                 </div>
@@ -242,7 +249,7 @@
                         <select id="country" class="form-input">
                             <option value="poland">Polska</option>
                             <option value="usa">Niemcy</option>
-                            <option value="italy">Stany Zjednoczone</option>
+                            <option value="italy">Czechy</option>
                         </select>
                     </div>
                     <p>
