Update select in form

--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                         <label for="country" class="form-label">Kraj</label>
                         <select id="country" class="form-input">
                             <option value="poland">Polska</option>
-                            <option value="usa">Niemcy</option>
-                            <option value="italy">Czechy</option>
+                            <option value="germany">Niemcy</option>
                         </select>
                     </div>
                     <p>
