--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </li>
                     </ul>
                     <div class="hero-promotion">
-                        <span class="hero-promotion-strong">Promocja na prenumeratę</span>
+                        <span class="hero-promotion-strong">Promocja na prenumeratę!</span>
                         <br /><s class="promotion-old-price">300 zł</s> <span class="promotion-price">150 zł</span>
                     </div>
                     <div class="hero-btn-wrapper">
@@ -184,7 +184,7 @@
                             <input type="text" placeholder="Imię i nazwisko" class="form-input" id="name" maxlength="40" required />
                             <div class="tooltip-wrapper">
                                 <div class="tooltip">
-                                    Format: Adam Nowak
+                                    format: Adam Nowak
                                 </div>
                                 <div class="question-sign">
                                     &#63;
@@ -198,7 +198,7 @@
                             <input type="email" placeholder="nazwa@gmail.com" class="form-input" id="email" required />
                             <div class="tooltip-wrapper">
                                 <div class="tooltip">
-                                    Format: adamnowak@gmail.com
+                                    format: adamnowak@gmail.com
                                 </div>
                                 <div class="question-sign">
                                     &#63;
@@ -212,7 +212,7 @@
                             <input type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" placeholder="123456789" class="form-input" id="phone" required />
                             <div class="tooltip-wrapper">
                                 <div class="tooltip">
-                                    Format: 123456789
+                                    format: 123456789
                                 </div>
                                 <div class="question-sign">
                                     &#63;
@@ -231,7 +231,7 @@
                                 <input type="text" pattern="[0-9]{2}-[0-9]{3}" placeholder="Kod pocztowy" id="zipcode" class="form-input" required />
                                 <div class="tooltip-wrapper">
                                     <div class="tooltip">
-                                        Format: 11-111
+                                        format: 11-111
                                     </div>
                                     <div class="question-sign">
                                         &#63;
@@ -261,6 +261,11 @@
                     <p class="info">
                         Przysługuje Państwu prawo do odstąpienia od umowy w terminie 14 dni licząc od dnia otrzymania pierwszego egzemplarza magazynu.
                     </p>
+                    <div class="form-links">
+                        <a href="#" target="_blank">Polityka prywatności</a>
+                        <a href="#" target="_blank">Regulamin</a>
+                        <a href="#" target="_blank">Kontakt</a>
+                    </div>
                 </form>
             </div>
         </section>
