Update text in reviews section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <p>
                             <span>Joanna</span>
                             <br />Na co dzień pracuję jako księgowa w dużej firmie produkcyjnej, ale to właśnie dzięki magazynowi Business <strong>nauczyłam się</strong>, w jaki sposób <strong>lepiej gospodarować</strong> własnymi
-                            <strong>środkami</strong>, co <strong>pozwoliło mi to na wyjazd na Hawaje</strong> wraz z rodziną.
+                            <strong>środkami, co pozwoliło mi na wyjazd na Hawaje</strong> wraz z rodziną.
                         </p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         </div>
                         <p>
                             <span>Maciej</span>
-                            <br />Byłem młodym pracownikiem korporacji pracującym na pełny etat od 8:00 do 16:00. Moja codzienność była pozbawiona wyzwań, a ja chciałem czegoś więcej. Dzięki magazynowi Business nauczyłem się, w jaki sposób mogę
+                            <br />Byłem młodym pracownikiem korporacji pracującym na pełny etat od 8:00 do 16:00. Moja codzienność była pozbawiona wyzwań, a ja chciałem czegoś więcej. <strong>Dzięki magazynowi Business</strong> nauczyłem się, w jaki sposób mogę
                             założyć działalność gospodarczą. Teraz od dwóch lat <strong>prowadzę dobrze prosperującą firmę</strong>.
                         </p>
                     </div>
